# smart-mirror

./: .env  README.md  companion.vite.config.ts  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
gesture_service/: .env.example  README.md  main.py  pyproject.toml
gesture_service/docs/: ARCHITECTURE.md  CONFIGURATION.md  CROSS_PLATFORM.md  INTEGRATION.md  OVERVIEW.md  QUICK_REFERENCE.md  RASPBERRY_PI_DEPLOYMENT.md  SUMMARY.md  examples.py
gesture_service/scripts/: quickstart.py  setup_raspberry_pi.sh  test_setup.py
gesture_service/src/: __init__.py  app.py  config.py
gesture_service/src/backend/: __init__.py  app.py  config.py  models.py
gesture_service/src/backend/websocket/: manager.py  server.py
gesture_service/src/common/: logging.py
gesture_service/src/core/: __init__.py  camera.py  detector.py  websocket_server.py
gesture_service/src/detection/: __init__.py
gesture_service/src/detection/hand_tracking/: __init__.py  detector_pipeline.py  test.py
gesture_service/src/detection/hand_tracking/common/: classes.py
gesture_service/src/detection/hand_tracking/gesture_models/dynamic_gestures/: dynamic_gestures.yaml  model.ipynb  test.py
gesture_service/src/detection/hand_tracking/gesture_models/static_gestures/: model.ipynb  static_gestures.yaml  test.py
gesture_service/src/detection/hand_tracking/modules/: buffer_processor.py  hand_detector.py  landmark_buffer.py
gesture_service/src/gestures/: __init__.py  recognizer.py
gesture_service/src/utils/: logger.py
(+89 files in other folders)
