[project]
name = "gesture-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "websockets>=12.0",
]
